--- a/beamerfontthemeIllini.sty
+++ b/beamerfontthemeIllini.sty
@@ -1,5 +1,7 @@
 % beamerfontthemeIllini.sty
 
+% About the usage of fonts, see https://brand.illinois.edu/visual-identity/typography
+
 \RequirePackage{fontspec}
 \renewcommand{\familydefault}{\rmdefault}
 \setsansfont{Source Sans Pro}
