--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 % This is a UIUC theme beamer template
 
-%\documentclass{beamer}
-\documentclass[aspectratio=169]{beamer} % Change to 16:9
+\documentclass{beamer}
+%\documentclass[aspectratio=169]{beamer} % Change to 16:9
 
 \usetheme{Illini}
 
